--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     "require": {
         "php": ">=5.4.0",
         "predis/predis": "^1.1",
-        "library/common":"dev-master"
+        "library/common":">1.0.10"
     },
     "autoload": {
         "psr-4": {
