--- a/composer.json
+++ b/composer.json
@@ -20,10 +20,14 @@
             "App\\": "src/"
         }
     },
+    "config": {
+        "preferred-install": "dist",
+        "secure-http": false
+    },
     "repositories": {
         "packagist": {
             "type": "composer",
-            "url": "https://packagist.phpcomposer.com"
+            "url": "https://mirrors.aliyun.com/composer/"
         },
         "wenba_packagist":{
             "type": "composer",
